[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "tensorflow>=2.14.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "vadersentiment>=3.3.2",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.65",
]
